Fixed Teams oage view for tab level device, alignment of menu button for mobile devices and added dropdown menu for mobile devices

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,8 @@
-@media (max-width:1024px) {
-
+@media (max-width:989px) {
+  nav>div>a{
+    max-width: 70vw;
+  }
+  nav>div{
+    padding-inline: 4vw;
+  }
 }
